# BlueBrick

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Cargo.toml  LICENSE  README.md  build.rs  vcpkg.json
bindings-generator/: Cargo.toml
bindings-generator/src/: bin.rs  bindings.rs  generator.rs  lib.rs  logger.rs  parser.rs  tokens.rs
bindings-generator/src/tokens/: class_tokens.rs  enum_tokens.rs  general_tokens.rs  globals_token.rs
loader/: CMakeLists.txt
loader/include/Games/MarvelSuperHeroes1/: CSListLink.hpp  Global.hpp
loader/include/Games/MarvelSuperHeroes1/Events/: Event.hpp  IEventListener.hpp
loader/include/Games/MarvelSuperHeroes1/Events/EventData/: NuEventData.hpp
loader/include/Games/MarvelSuperHeroes1/GUI/: GUI2MenuEntry.hpp  GUI2Page.hpp  GUI2PageHandler.hpp
loader/include/Games/MarvelSuperHeroes1/GUI/Flow/: FlowPageHandler2.hpp
loader/include/Games/MarvelSuperHeroes1/GUI/Flow/Screens/: MainMenuScreen.hpp
loader/include/Internal/: HookHelpers.hpp
loader/include/Internal/Hooking/: HookableFuncData.hpp  MemberFuncData.hpp  StaticFuncData.hpp
loader/include/Internal/Mod/: ModLoader.hpp  Overlay.hpp
loader/include/MarvelSuperHeroes1/steam_api/: version.txt
loader/include/Platform/WIN32/DX9/: Overlay.hpp
loader/include/Universal/: Export.hpp  Types.hpp
loader/include/Universal/Hooking/: CallConv.hpp  ClassManager.hpp  FuncData.hpp  Hook.hpp  HookManager.hpp
loader/include/Universal/Logger/: Color.hpp  Logger.hpp  Severity.hpp
loader/include/Universal/Logger/Color/: Color.hpp  Color256.hpp  ColorBase.hpp  ColorNone.hpp  ConsoleColor.hpp
loader/include/Universal/Mod/: Mod.hpp  ModEntry.hpp  ModInfo.hpp
loader/launcher/: CMakeLists.txt  proxy.cpp  proxy.def
loader/src/: main.cpp  version.rc.in
loader/src/Games/MarvelSuperHeroes1/: Global.cpp
loader/src/Games/MarvelSuperHeroes1/Events/: IEventListener.cpp
loader/src/Games/MarvelSuperHeroes1/GUI/: GUI2PageHandler.cpp
loader/src/Games/MarvelSuperHeroes1/GUI/Flow/Screens/: MainMenuScreen.cpp  MainMenuScreen.hpp
loader/src/Internal/Mod/: ModLoader.cpp  Overlay.cpp
loader/src/Logger/: Logger.cpp
loader/src/Mod/: Mod.cpp  ModEntry.cpp
loader/src/Platform/WIN32/DX9/: ModLoader.cpp  Overlay.cpp
loader/src/Universal/Hooking/: FuncData.cpp  HookManager.cpp
loader/src/Universal/Logger/: Color.cpp  Logger.cpp
loader/src/Universal/Logger/Color/: Color.cpp  Color256.cpp  ColorBase.cpp  ColorNone.cpp  ConsoleColor.cpp
loader/src/Universal/Mod/: Mod.cpp  ModInfo.cpp
loader/test/: CMakeLists.txt
loader/test/TestMod/: CMakeLists.txt  Mod.cpp
proc-macros/src/: lib.rs  subbricks.rs
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
rust-bindings/: Cargo.toml
rust-bindings/src/: lib.rs  logger.rs  subbrick.rs
rust-proxy-bindings/: Cargo.toml
rust-proxy-bindings/src/: lib.rs
src/: lib.rs  overlay.rs  proxy.rs  subbrick.rs
src/logger/: mod.rs  web_colors.rs  windows.rs
src/memutils/: windows.rs
src/overlay/: dx9.rs  imgui_impl_dx9.cpp  imgui_impl_win32.cpp  mod.rs  platforms.rs  renderers.rs  win32.rs  win32_dx9.rs
src/overlay/renderers/: dx9.rs  imgui_impl_dx9.cpp
