[package]
name = "bluebrick-loader"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
colored = "3.0.0"
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
imgui = { git="https://github.com/XdotCore/imgui-rs", features = ["docking", "freetype"] }
imgui-sys = { git="https://github.com/XdotCore/imgui-rs", features = ["docking", "freetype", "lunasvg", "use-git"] }
#imgui = { path="../../imgui-rs/imgui", features = ["docking", "freetype"] }
#imgui-sys = { path="../../imgui-rs/imgui-sys", features = ["docking", "freetype", "lunasvg", "use-git"] }
msgbox = "0.7.0"
regex = "1.11.1"
bluebrick = { path="rust-bindings" }

[dependencies.retour]
version = "0.3.1"
features = [
    "static-detour",
    "thiscall-abi"
]

[target.'cfg(windows)'.dependencies.windows]
version = "0.61.1"
features = [
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
    "Win32_Graphics_Direct3D9",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input"
]

[target.'cfg(windows)'.dependencies]
windows-numerics = "0.2.0"

[build-dependencies]
cc = "1.2.17"

[lib]
crate-type = [ "cdylib" ]
name = "bluebrick"
