[package]
name = "bluebrick-bindings-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
cargo_metadata = "0.23.1"
colored = "3.0.0"
itertools = "0.14.0"
num-traits = "0.2.19"
proc-macro2 = "1.0.105"
quote = "1.0.40"
serde = "1.0.228"
serde_json = "1.0.149"
structopt = "0.3.26"
syn = { version = "2.0.100", features = ["full"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "bbb-gen"
path = "src/bin.rs"
